# product-manual-support

./: Dockerfile  README.md  app.py  main.py  pyproject.toml
backend/: .env.template  agent.py  check_models.py  main.py  pyproject.toml
frontend/: package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
